# igles-ia

./: .gitignore  CLAUDE.md  FASE1_HOMEPAGE_IMPROVEMENTS.md  FASE1_VALIDATION_REPORT.md  Makefile  atlas-vector-search-quick-start.py  brevo_contacts.csv  cognito_emails.csv  crop.py  emails.csv  emails_dev.csv  generar_audio.py  generar_rss.py  igles-ia.ipynb  images.ipynb  jubileo2.html  main.py  main_stock.py  plantilla.html  podcast.xml  pyproject.toml  send_email.ipynb  summary.txt  train.txt.pkl  training_data.pkl  vector-index.py
assets/: types_list.csv
data_web/: contenido_semanal.html
dev_notebooks/: brevo_contacts.csv  contacts.csv  igles-ia.ipynb  obtener_homilias_new.ipynb  polly.ipynb  ses.ipynb  spotify.ipynb  stock_tracker.ipynb
docs/: CNAME  _redirects  contacto.html  index.html  leon-xiv-jubileo-de-los-jovenes-2025.html  podcast.xml  politica-de-privacidad.html  resumen-semanal.html  resumenes.html  robots.txt  sitemap.xml  sobre-nosotros.html
explore/: app.js  index.html  style.css
iglesia/: agents.py  audio_utils.py  cognito_utils.py  email_utils.py  email_utils_2.py  utils.py
lambda_package/: welcome.html
pope-archive/: config.py  pope-archive.py  pope.ipynb
summaries-old/: 2025-05-09_homilia_santa_misa_pro_ecclesia_celebrada_por_el_romano_pontífice_león_xiv_con_los_cardenales_(9_de_mayo_de_2025).json  2025-05-10_discurso_discurso_del_santo_padre_al_colegio_cardenalicio_(10_de_mayo_de_2025).json  2025-05-11_angelus_regina_caeli,_11_de_mayo_de_2025.json  2025-05-11_homilia_homilía_del_santo_padre_león_xiv_en_la_cripta_de_la_basílica_de_san_pedro_(11_de_mayo_de_2025).json  2025-05-12_discurso_audiencia_del_santo_padre_león_xiv_a_los_representantes_de_los_medios_de_comunicación__(12_de_mayo_de_2025).json  2025-05-14_discurso_a_los_participantes_en_el_jubileo_de_las_iglesias_orientales_(14_de_mayo_de_2025).json  2025-05-17_discurso_inglés.json  (+6 more)
web/: app.py  (+2 more)
(+1111 files in other folders)
