[project]
name = "iglesia"
version = "0.1.0"
description = "Weekly newsletter about the Pope Leon XIV"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "crewai>=0.120.1",
    "frozen-flask>=1.0.2",
    "ipykernel>=6.29.5",
    "markdown>=3.8",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "typer==0.12.3",
    "click==8.1.7",
    "wordcloud>=1.9.4",
    "ruff>=0.11.13",
    "yfinance>=0.2.63",
    "brevo-python>=1.1.2",
    "boto3>=1.38.41",
]

[tool.setuptools]
packages = ["iglesia"]
